# Udacity_Data_Scientist_Nanodegree

Project_1/: README.md  pyproject.toml
Project_1/code/: eda.ipynb
Project_2/: pyproject.toml  requirements.txt
Project_2/python-package/employee_events/: employee.py  query_base.py  sql_execution.py  team.py
Project_2/report/: dashboard.py  utils.py
Project_2/tests/: test_employee_events.py
Project_3/: README.md  main.py  pyproject.toml
Project_3/cache/: X_test_processed.pkl
Project_3/code/: predictor_ui.ipynb  starter.ipynb
Project_4/: main.py  pyproject.toml
Project_4/code/: Recommendations_with_IBM.html  Recommendations_with_IBM.ipynb  project_tests.py
