[project]
name = "project-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "textblob>=0.19.0",
    "wordcloud>=1.9.4",
]
